--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title> Projeto Cálculos de Vida </title>
 </head>
 <body>
-    
+    <div>
+        Cálculo de IMC
+    </div>
+    <div>
+        Altura: <input type="number" name="altura" id="txtAltura">
+        Peso: <input type="number" name="peso" id="txtPeso">
+    </div>
 </body>
 </html>
