--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js"></script>
     <title> Projeto Cálculos de Vida </title>
 </head>
 <body>
@@ -13,6 +14,11 @@
     <div>
         Altura: <input type="number" name="altura" id="txtAltura">
         Peso: <input type="number" name="peso" id="txtPeso">
+    </div>
+    <div>
+        <button onclick="">
+            Cálcular
+        </button>
     </div>
 </body>
 </html>
